--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -87,11 +87,12 @@ main .card p {
 
 body::after {
     content: "";
-    position: fixed;
+    position: absolute;
     background: whitesmoke;
-    top: 260px;
+    top: 0;
     right: 0;
     left: 0;
     bottom: 0;
+    height: 16rem;
     z-index: -1;
 }
