--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -9,12 +9,13 @@
 
 {% block styles %}
 <link rel="stylesheet" href="/styles/create-point.css">
+<link rel="stylesheet" href="/styles/modal.css">
 {% endblock styles %}
 
 
 {% block content %}
     {% include "partials/page-header.html" %}
-    <form action="">
+    <form action="/savepoint" method="POST">
 
         <h1>Cadastro do Ponto de Coleta</h1>
 
@@ -75,32 +76,32 @@
             </legend>
 
             <div class="items-grid">
-                <li data-id="1">
+                <li data-id="Lâmpadas">
                     <img src="/img/lampadas.svg" alt="Imagem Lâmpada">
                     <span>Lâmpadas</span>
                 </li>
 
-                <li data-id="2">
+                <li data-id="Pilhas e Baterias">
                     <img src="/img/baterias.svg" alt="Imagem Pilhas e Baterias">
                     <span>Pilhas e Baterias</span>
                 </li>
 
-                <li data-id="3">
+                <li data-id="Papéis e Papelão">
                     <img src="/img/papeis-papelao.svg" alt="Imagem Papéis e Papelão">
                     <span>Papéis e Papelão</span>
                 </li>
 
-                <li data-id="4">
+                <li data-id="Resíduos Eletrônicos">
                     <img src="/img/eletronicos.svg" alt="Imagem Resíduos Eletrônicos">
                     <span>Resíduos Eletrônicos</span>
                 </li>
 
-                <li data-id="5">
+                <li data-id="Resíduos Orgânicos">
                     <img src="/img/organicos.svg" alt="Imagem Resíduos Orgânicos">
                     <span>Resíduos Orgânicos</span>
                 </li>
 
-                <li data-id="6">
+                <li data-id="Óleo de Cozinha">
                     <img src="/img/oleo.svg" alt="Imagem 'Óleo de Cozinha'">
                     <span>Óleo de Cozinha</span>
                 </li>
@@ -113,8 +114,15 @@
         <button type="submit">Cadastrar Ponto de Coleta</button>
 
     </form>
+
+
 {% endblock content %}
 
+{% block modal%}
+    {% if saved %}
+        {% include "partials/point-created.html" %}
+    {% endif %}
+{% endblock modal%}
 
 {% block scripts %}
     <script src="/scripts/create-point.js"></script>
