--- a/src/views/partials/modal.html
+++ b/src/views/partials/modal.html
@@ -5,7 +5,7 @@
             <a href="#">Fechar</a>
         </div>
         <form action="/search-results">
-            <label for="search">Cidade</label>
+            <label for="search">Cidade ou Estado</label>
             <div class="search field">
                 <input type="text" name="search" placeholder="Pesquise por Cidade">
                 <button>
